// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Card with icon 1`] = `
<EmotionCssPropInternal
  __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Card"
  __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
  css={
    Object {
      "background": "#fff",
      "border": "none",
      "borderRadius": "3px",
      "borderTop": "3px solid #D15130",
      "boxShadow": "0 1px 3px rgba(0, 0, 0, 0.12)",
      "boxSizing": "border-box",
      "marginBottom": "15px",
      "overflow": "hidden",
      "transition": "all .4s ease",
    }
  }
>
  <EmotionCssPropInternal
    __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Card"
    __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
    css={
      Object {
        "background": "",
        "borderBottom": "2px solid #e7eaec",
        "boxSizing": "border-box",
        "color": "#D15130",
        "fontSize": "14px",
        "fontWeight": "600",
        "padding": "15px",
        "textTransform": "uppercase",
        "width": "100%",
      }
    }
  >
    <EmotionCssPropInternal
      __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Card"
      __EMOTION_TYPE_PLEASE_DO_NOT_USE__="span"
      css={
        Object {
          "marginRight": "10px",
        }
      }
    >
      <span>
        icon
      </span>
    </EmotionCssPropInternal>
    Test title
  </EmotionCssPropInternal>
  <EmotionCssPropInternal
    __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Card"
    __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
    css={
      Object {
        "padding": "15px",
      }
    }
  >
    Test Card
  </EmotionCssPropInternal>
</EmotionCssPropInternal>
`;

exports[`Card Card without container 1`] = `
<EmotionCssPropInternal
  __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Card"
  __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
  css={
    Object {
      "background": "#fff",
      "border": "none",
      "borderRadius": "3px",
      "borderTop": "3px solid #D15130",
      "boxShadow": "0 1px 3px rgba(0, 0, 0, 0.12)",
      "boxSizing": "border-box",
      "marginBottom": "15px",
      "overflow": "hidden",
      "transition": "all .4s ease",
    }
  }
>
  <EmotionCssPropInternal
    __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Card"
    __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
    css={
      Object {
        "background": "",
        "borderBottom": "2px solid #e7eaec",
        "boxSizing": "border-box",
        "color": "#D15130",
        "fontSize": "14px",
        "fontWeight": "600",
        "padding": "15px",
        "textTransform": "uppercase",
        "width": "100%",
      }
    }
  >
    <EmotionCssPropInternal
      __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Card"
      __EMOTION_TYPE_PLEASE_DO_NOT_USE__="span"
      css={
        Object {
          "marginRight": "10px",
        }
      }
    >
      <span>
        icon
      </span>
    </EmotionCssPropInternal>
    Test title
  </EmotionCssPropInternal>
  Test Card
</EmotionCssPropInternal>
`;

exports[`Card Default Card 1`] = `
<EmotionCssPropInternal
  __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Card"
  __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
  css={
    Object {
      "background": "#fff",
      "border": "1px solid #3F88C5",
      "borderRadius": "3px",
      "borderTop": undefined,
      "boxShadow": "0 1px 3px rgba(0, 0, 0, 0.12)",
      "boxSizing": "border-box",
      "marginBottom": "15px",
      "overflow": "hidden",
      "transition": "all .4s ease",
    }
  }
>
  <EmotionCssPropInternal
    __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Card"
    __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
    css={
      Object {
        "padding": "15px",
      }
    }
  >
    Test alert
  </EmotionCssPropInternal>
</EmotionCssPropInternal>
`;

exports[`Card Outline Card 1`] = `
<EmotionCssPropInternal
  __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Card"
  __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
  css={
    Object {
      "background": "#fff",
      "border": "none",
      "borderRadius": "3px",
      "borderTop": "3px solid #D15130",
      "boxShadow": "0 1px 3px rgba(0, 0, 0, 0.12)",
      "boxSizing": "border-box",
      "marginBottom": "15px",
      "overflow": "hidden",
      "transition": "all .4s ease",
    }
  }
>
  <EmotionCssPropInternal
    __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Card"
    __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
    css={
      Object {
        "background": "",
        "borderBottom": "2px solid #e7eaec",
        "boxSizing": "border-box",
        "color": "#D15130",
        "fontSize": "14px",
        "fontWeight": "600",
        "padding": "15px",
        "textTransform": "uppercase",
        "width": "100%",
      }
    }
  >
    Test title
  </EmotionCssPropInternal>
  <EmotionCssPropInternal
    __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Card"
    __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
    css={
      Object {
        "padding": "15px",
      }
    }
  >
    Test Card
  </EmotionCssPropInternal>
</EmotionCssPropInternal>
`;
